fix(FacesScale): Slider to PainScale alignment

--- a/src/components/PainScale/style.css
+++ b/src/components/PainScale/style.css
@@ -46,7 +46,10 @@
 }
 
 .pain-scale .container-slider .slider {
+    padding-left: calc(2.5rem/2);
+    padding-right: calc(2.5rem/2);
     width: 100%;
+    box-sizing: border-box;
 }
 
 .pain-scale .description {
